<resources>
    <string name="app_name">Note Saver</string>
    <string name="action_settings">Settings</string>
    <string name="File">File</string>
    <string name="Edit">Edit</string>
    <string name="Canvas">Canvas</string>
    <string name="Help">Help</string>
    <string name="Exit">Exit</string>
    <string name="New">New</string>
    <string name="Open">Open</string>
    <string name="Save">Save</string>
    <string name="SaveAs">Save As</string>
    <string name="Undo">Undo</string>
    <string name="Redo">Redo</string>
    <string name="Clear">Clear</string>
    <string name="ChangeTexture">Change Texture</string>
    <string name="ResetTexture">Reset Texture</string>
    <string name="About">About</string>
    <string name="SelectImage">Please select an image</string>
    <string name="Return">Return</string>
    <string name="Delete">Delete</string>
    <string name="Copy">Copy</string>
    <string name="Import">Import</string>
    <string name="Share">Share</string>
    <string name="SaveSuccess">Successfully saved!</string>
    <string name="Saved">Saved</string>
    <string name="SaveFail">Save unsuccessful</string>
    <string name="FileName">Please enter a name</string>
    <string name="Prompt">Prompt</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Apply">Apply</string>
    <string name="View">View Now</string>
    <string name="ChangeBackground">Change Background</string>
    <string name="NoteSaver">Note Saver</string>
    <string name="confirm_to_del">Deleting this note will delete all containing pages. Are you sure want to delete this note?</string>
    <string name="details">Details</string>
    <string name="Merging">Merging</string>
    <string name="Stop">Stop</string>
    <string name="stop_merge">Stop merge</string>
    <string name="pages">Pages</string>
    <string name="noteName">Note</string>
    <string name="title_already_exist">This title already exists. Please enter another title name.</string>
    <string name="attribute_empty_title_forbidden">A title is required</string>
    <string name="DeleteAPageWarningInfo">Do you want to delete this page?</string>
    <string name="WarningNoPageInfo">You must add a page first</string>
    <string name="NoteName">Name of note</string>
    <string name="SelectCover">Select a cover</string>
    <string name="RenameNoticeInfoTitle">Notice</string>
    <string name="RenameNoticeInfoDetail">This function can only be enabled when a note has been selected.</string>
    <string name="RenameWarningInfo">The name you have input is invalid.</string>
    <string name="add_picture">Add a picture</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_image">Choose an image</string>
    <string name="ShareDialogTitle">Share</string>
    <string name="MovePageTitle">Move the page</string>
    <string name="JustMove">Directly move</string>
    <string name="DialogMoveToNotice">Do you want to move the page or copy the page?</string>
    <string name="Cut">Cut</string>
    <string name="Paste">Paste</string>
    <string name="Merge">Merge</string>
    <string name="MergeSucceed">Successfully Merged</string>
    <string name="MergeSuccessInfo">Current page merging succeeded</string>
    <string name="MergeFailed">Merge Failed</string>
    <string name="MergeFailedInfo">Current page merging cannot be completed</string>
    <string name="GrantedPermissionSucceed">Authorization succeeded!</string>
    <string name="GrantedPermissionFailed">Authorization failed!</string>
    <string name="permission">Authority</string>
    <string name="no_permissions">Require necessary permissions</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="string_help_text">No necessary authority for program running! Please click "Setting"-"Application" to select app to authorize</string>
    <string name="quit">Quit</string>
    <string name="Success">Success</string>
    <string name="CopySucceed">Successfully copied!</string>
    <string name="MoveSucceed">Successfully moved!</string>
    <string name="Failed">Failed</string>
    <string name="FailedInfo">You must choose another note</string>
    <string name="SavingInfo">Saving data now, please wait!</string>
    <string name="TitleSaving">Saving</string>
    <string name="Share_Bluetooth">Bluetooth</string>
    <string name="Share_Gmail">Gmail</string>
    <string name="Share_Wechat">Wechat</string>
    <string name="Share_QQ">QQ</string>
    <string name="Share_Evernote">Evernote</string>
    <string name="Share_Drive">Drive</string>
    <string name="Share_Gallery">Gallery</string>
    <string name="Share_PDF">Save as PDF</string>
    <string name="NameShownInApp">Lenovo Note Saver</string>
    <string name="HelpTitleStep_2">Customize your Notebooks</string>
    <string name="HelpTitleStep_3">Note Pages</string>
    <string name="HelpTitleStep_4">Note merging</string>
    <string name="HelpTitleStep_5">Note editing</string>
    <string name="HelpTitleStep_6">Share a note</string>
    <string name="HelpDetailStep_6">You can export your notes as an image or PDF format. You can also share your notes via Bluetooth and more.</string>
    <string name="HelpDetailStep_5">When editing a note, you can choose different writing tools, set pen thickness, and use different colors. You can even insert text to create extra content.</string>
    <string name="HelpDetailStep_4">By pressing the "merge" button @hanvon@, you can choose another page to merge with your current note.</string>
    <string name="HelpDetailStep_3">You can quickly view any page in the preview pane of your notebook. You can also long press and drag pages to rearrange their order in the notebook.</string>
    <string name="HelpDetailStep_2">From your Notebook\'s cover, tap the settings @hanvon@ button, where you can change the color and style of your cover. This helps you easily organize your notebooks.</string>
    <string name="HelpDetailStep_1">Thanks for choosing Lenovo Note Saver for all your note-taking! To get you started, a notebook titled "Note Saver" has already been created for you, where all your notes taken on and off the screen will be saved. Feel free to edit them at any time.</string>
    <string name="HelpStep_5_Des_1">Brush and text</string>
    <string name="HelpStep_5_Des_2">Insert an image</string>
    <string name="HelpStep_5_Des_3">Frame the content</string>
    <string name="HelpStep_5_Des_4">Brush Type</string>
    <string name="HelpStep_5_Des_5">Brush Thickness</string>
    <string name="HelpStep_5_Des_6">Double click to adjust the color</string>
    <string name="AppVersion">Version</string>
    <string name="AppVersionCode">1.1.30</string>
    <string name="AppCopyRight">Copyright ©2016 Lenovo All Rights Reserved</string>
    <string name="SettingOpenInquiry">Ask me when opening the default note jumping location</string>
    <string name="OpenInquiryTitle">Open the default jump location for note</string>
    <string name="JumpToLatest">Jump to the last edited page</string>
    <string name="JumpToEnd">Jump to the last page</string>
    <string name="LimitPictureAmount">Your input has reached the max limit.</string>


    <!-- Default Demo Values-->
    <string name="TestTagString">2016年7月4日 15:21:06</string>
    <string name="DefaultDate">01/16/2016</string>
    <string name="DefaultTab">1/16</string>
    <string name="DefaultInteger">24</string>
    <string name="DefaultFontText">Roboto</string>
    <string name="defalut_number_two">"2"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
