<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_uniform_dialog"
    android:paddingLeft="30px"
    android:paddingRight="30px">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="80px"
        android:gravity="center_vertical"
        android:text="@string/DefaultFontText"
        android:textColor="@color/Dialog_Title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_content"
        android:lineSpacingExtra="26px"
        android:textColor="@color/Dialog_Content"
        android:textSize="@dimen/dialog_content_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_to_del"
        android:layout_marginBottom="30px"
        android:layout_marginTop="30px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_bottom_height"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textColor="@color/Dialog_Cancel"
            android:textSize="@dimen/dialog_bottom_text_size" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="76px"
            android:text="@string/OK"
            android:textAllCaps="false"
            android:textColor="@color/Dialog_Confirm"
            android:textSize="@dimen/dialog_bottom_text_size" />
    </LinearLayout>

</LinearLayout>