<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hanvon="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="392px"
        android:layout_gravity="center"
        android:background="@drawable/bg_uniform_dialog"
        android:orientation="vertical"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:gravity="center_vertical"
            android:text="@string/OpenInquiryTitle"
            android:textColor="#121212"
            android:textSize="32px"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.hanvon.virtualpage.pageeditor.view.AutoBgButton
                android:id="@+id/abb_jump_latest"
                android:layout_width="50px"
                android:layout_height="50px"
                android:padding="2px"
                android:scaleType="centerInside"
                android:src="@drawable/ic_page_setting_checkbox_reset"
                hanvon:SelectedBgRes="@drawable/ic_page_setting_checkbox_selected"
                hanvon:UnSelectedBgRes="@drawable/ic_page_setting_checkbox_reset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30px"
                android:text="@string/JumpToLatest"
                android:textColor="#121212"
                android:textSize="30px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.hanvon.virtualpage.pageeditor.view.AutoBgButton
                android:id="@+id/abb_jump_to_end"
                android:layout_width="50px"
                android:layout_height="50px"
                android:padding="2px"
                android:scaleType="centerInside"
                android:src="@drawable/ic_page_setting_checkbox_reset"
                hanvon:SelectedBgRes="@drawable/ic_page_setting_checkbox_selected"
                hanvon:UnSelectedBgRes="@drawable/ic_page_setting_checkbox_reset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:text="@string/JumpToEnd"
                android:textColor="#121212"
                android:textSize="30px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Cancel"
                android:textAllCaps="false"
                android:textColor="@color/Dialog_Cancel"
                android:textSize="@dimen/dialog_bottom_text_size" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="76px"
                android:text="@string/OK"
                android:textColor="@color/Dialog_Confirm"
                android:textSize="@dimen/dialog_bottom_text_size" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>