<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_gravity="center"
        android:id="@+id/fl_parent"
        android:layout_width="836px"
        android:layout_height="814px"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="90px"
            android:layout_height="90px"
            android:layout_alignParentRight="true"
            android:layout_marginRight="11px"
            android:layout_marginTop="11px"
            android:src="@drawable/ic_help_close" />

        <ImageView
            android:id="@+id/iv_icon_about"
            android:layout_width="206px"
            android:layout_height="236px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="192px"
            android:src="@drawable/ic_about_note_saver" />

        <TextView
            android:id="@+id/tv_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_icon_about"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46px"
            android:fontFamily="sans-serif"
            android:text="@string/NameShownInApp"
            android:textColor="#000000"
            android:textSize="36px"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_about_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/AppVersion"
                android:textColor="#434343"
                android:textSize="30px"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_version_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:fontFamily="sans-serif"
                android:text="@string/AppVersionCode"
                android:textColor="#434343"
                android:textSize="30px"
                android:textStyle="normal" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36px"
            android:fontFamily="sans-serif"
            android:text="@string/AppCopyRight"
            android:textColor="#787878"
            android:textSize="24px"
            android:textStyle="normal" />

    </RelativeLayout>
</FrameLayout>